@@ -1,3 +1,7 @@
+2009-07-04 Jens Thoms Toerring    <jt@toerring.de>
+
+	* Bugs found by Werner Heisch in fdesign fixed.
+
 2009-07-03 Jens Thoms Toerring    <jt@toerring.de>
 
 	* Some bugs in code for drawing of folder and
